welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:5: error: value Yellow is not a member of object java.awt.Color
{coupstylo(c);avance();coupstylo(Color.Yellow);aRC(c);droite();aRC(c);gauche();gauche();aRC(c);droite()}
                                       ^